--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_main_login">MainLogin</string>
     <string name="title_activity_new_account">NewAccountActivity</string>
     <string name="title_activity_logged_account">LoggedAccountActivity</string>
+    <string name="title_activity_opened_album">OpenedAlbumActivity</string>
 
 </resources>
