back up interfaces added(pause till web design)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_logged_account">LoggedAccountActivity</string>
     <string name="title_activity_opened_album">OpenedAlbumActivity</string>
     <string name="title_activity_add_image">AddImageActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
